--- a/App_Time_Recorder/app/build.gradle
+++ b/App_Time_Recorder/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "app.atr.mobitribe.com.app_time_recorder"
-        minSdkVersion 16
+        minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -49,6 +49,11 @@ dependencies {
 
     /*Play services*/
     compile 'com.google.android.gms:play-services-location:10.0.1'
+
+    /*Easy permission location */
+    compile 'pub.devrel:easypermissions:0.2.1'
+
+
 
 
 
