--- a/App_Time_Recorder/app/src/main/AndroidManifest.xml
+++ b/App_Time_Recorder/app/src/main/AndroidManifest.xml
@@ -4,27 +4,31 @@
     package="app.atr.mobitribe.com.app_time_recorder">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INSTALL_PACKAGES" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission
         android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".jobscheduler.App"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:icon="@drawable/ic_launcher">
+
         <activity
             android:name=".screens.AppUsageStatisticsActivity"
             android:label="@string/app_name" />
-        <activity
-            android:name=".screens.LoginActivity"
-            android:label="@string/app_name">
+     <activity android:name=".screens.LoginActivity"></activity>
+        <activity android:name=".screens.SplashScreen"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,7 +36,6 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".screens.DeviceInfoActivtiy"></activity>
 
         <receiver
             android:name=".jobscheduler.JobFactory$AddReceiver"
@@ -41,31 +44,40 @@
                 <action android:name="com.evernote.android.job.ADD_JOB_CREATOR" />
             </intent-filter>
         </receiver>
+        <receiver android:name=".receivers.NetworkChangeReceiver">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <!-- <action android:name="android.net.wifi.WIFI_STATE_CHANGED" /> -->
+            </intent-filter>
+        </receiver>
         <!-- android:priority="0" -->
-        <!--<receiver android:name=".recievers.UnInstallerReceiver">-->
-            <!--<intent-filter>-->
+        <!-- <receiver android:name=".recievers.UnInstallerReceiver"> -->
+        <!-- <intent-filter> -->
 
-                <!--&lt;!&ndash; <action android:name="android.intent.action.QUERY_PACKAGE_RESTART" /> &ndash;&gt;-->
-                <!--<action android:name="android.intent.action.PACKAGE_FULLY_REMOVED" />-->
-                <!--&lt;!&ndash; android.intent.action.QUERY_PACKAGE_RESTART &ndash;&gt;-->
-                <!--&lt;!&ndash; android.intent.action.PACKAGE_REMOVED &ndash;&gt;-->
-                <!--<data android:scheme="package" />-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
-        <!--<receiver android:name=".screens.TestActivity$DeviceAdmin"-->
-            <!--android:label="@string/sample_device_admin2"-->
-            <!--android:description="@string/sample_device_admin_description2"-->
-            <!--android:permission="android.permission.BIND_DEVICE_ADMIN">-->
-            <!--<meta-data android:name="android.app.device_admin"-->
-                <!--android:resource="@xml/device_admin_sample" />-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
+
+        <!-- &lt;!&ndash; <action android:name="android.intent.action.QUERY_PACKAGE_RESTART" /> &ndash;&gt; -->
+        <!-- <action android:name="android.intent.action.PACKAGE_FULLY_REMOVED" /> -->
+        <!-- &lt;!&ndash; android.intent.action.QUERY_PACKAGE_RESTART &ndash;&gt; -->
+        <!-- &lt;!&ndash; android.intent.action.PACKAGE_REMOVED &ndash;&gt; -->
+        <!-- <data android:scheme="package" /> -->
+        <!-- </intent-filter> -->
+        <!-- </receiver> -->
+         <receiver android:name=".screens.SplashScreen$MyDeviceAdministrator"
+             android:enabled="true"
+         android:label="@string/sample_device_admin2"
+         android:description="@string/sample_device_admin_description2"
+         android:permission="android.permission.BIND_DEVICE_ADMIN">
+         <meta-data android:name="android.app.device_admin"
+         android:resource="@xml/device_admin_sample" />
+         <intent-filter>
+         <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
+         </intent-filter>
+         </receiver>
 
         <service android:name=".backgroundServices.LocationService" />
 
-        <activity android:name=".screens.TestActivity">
+
+        <activity android:name=".screens.SampleActivty">
 
         </activity>
     </application>
